# game-of-life

./: .cproject  .project  CMakeLists.txt  GoL.sh  Makefile  README  README.md  cmd.cpp  gui.cpp  gui.hpp  life.cpp  life.hpp  main.cpp  main.hpp
samples/: ants.txt  anvil.txt  anvil.txt~  coeship.txt  cordership  dragon  glider.txt  gun.txt  gun_with_eater.txt  switchengines  weekender.txt
